# falpr

./: .gitignore  CMakeLists.txt  README.md
dataset/plates/uz/: readme.md
examples/demo/: CMakeLists.txt  main.cpp
include/falpr/: FALPR.h  FALPR_Shared.h  PlateDetector.h  PlateRecognizer.h  Utils.h  VehicleDetector.h
src/falpr/: FALPR.cpp  PlateDetector.cpp  PlateRecognizer.cpp  Utils.cpp  VehicleDetector.cpp
